AI-128: Fix admin - profiles dashboard issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/administer/common/_common.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/administer/common/_common.scss
@@ -78,8 +78,8 @@ ul.civihr-popup {
   }
 
   .help {
-    @include civihr_panel();
     background: $crm-light-green-color;
+    border-radius: $border-radius-base;
     margin-bottom: 10px;
     padding: 10px;
   }
