AI-111: Fix suggested issues in PR

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_mixins.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_mixins.scss
@@ -17,7 +17,7 @@
   box-sizing: border-box;
 }
 
-// Generic Transform
+// A transformation is an effect that lets an element change shape, size and position.
 @mixin transform($transforms) {
   -moz-transform: $transforms;
   -ms-transform: $transforms;
@@ -26,7 +26,7 @@
   transform: $transforms;
 }
 
-// Translate
+// The translate() CSS function moves the position of the element on the plane. This transformation is characterized by a vector whose coordinates define how much it moves in each direction.
 @mixin translate ($x, $y) {
   @include transform(translate($x, $y));
 }
