AI-105: Fix padding issue

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -92,6 +92,7 @@
       background: $crm-white;
       border-radius: $border-radius-child $border-radius-child 0 0;
       margin: 0;
+      padding: 15px 20px;
     }
 
     .crm-submit-buttons {
