PCHR-2250: Change accure to accrue

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -6,7 +6,7 @@
   <h4 class="modal-title">
     <span ng-show="$ctrl.isLeaveType('leave')">Leave Request</span>
     <span ng-show="$ctrl.isLeaveType('sickness')">Sick Absence</span>
-    <span ng-show="$ctrl.isLeaveType('toil')">Accure TOIL for additional work</span>
+    <span ng-show="$ctrl.isLeaveType('toil')">Accrue TOIL for additional work</span>
   </h4>
 </div>
 <crm-loading show="!$ctrl.loading.absenceTypes">
