--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -857,6 +857,7 @@
 
         td .dateplugin {
           display: inline-block;
+          font-weight: normal;
           max-width: 150px;
         }        
       }
@@ -904,41 +905,93 @@
       }
     }
 
-    .CRM_Member_Form_Task_Batch .crm-form-block {
-      .help {
-        border-radius: $border-radius-base $border-radius-base 0 0;
-      }
+    .CRM_Member_Form_Task_Batch {
+      .crm-member-task-batch-form-block {
+        box-shadow: none;
+        margin-top: 9.5em;
+        position: relative;
 
-      table {
-        display: block;
-        overflow-x: auto;
+        .help {
+          border-radius: $border-radius-base;
+          padding: 10px;
+          position: absolute;
+          top: -75px;
+        }
 
-        tbody tr {
+                 
+        table thead tr.columnheader {
+          th, td {
+            font-size: $font-size-base !important;
+            padding: 15px 10px;
+
+            &:first-child {
+              padding-left: 20px;
+            }
+
+            &:last-child {
+              padding-right: 20px;
+            }
+          }
+        }
+
+        table tbody tr {
           border-bottom: 1px solid $crm-background;
         }
 
-        tbody tr td {
-          white-space: nowrap;
+        table tbody tr td {
+          min-width: 85px;
+          padding: 15px 10px;
+
+          &:first-child {
+            padding-left: 20px;
+          }
+
+          &:last-child {
+            padding-right: 20px;
+          }
+
+          &:nth-child(1),
+          &:nth-child(2) {
+            max-width: 120px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            width: 120px;
+          }
 
           &:nth-child(3),
           &:nth-child(5) {
-            width: 172px;
+            min-width: 125px;
+            width: 125px;
 
             .addon + .crm-clear-link {
-              padding: 4px 0;              
+              left: -5px;
+              padding: 4px 0;
+              position: relative;
             }
           }
 
+          &:nth-child(4),
+          &:nth-child(6) {
+            max-width: 120px;
+            width: 120px;
+          }
+
           .select2-container {
-            margin-top: 0 !important;  
+            margin-top: 0 !important;
+            min-width: 100% !important;
+            width: 100% !important;
           }
         }
-      }
 
+        table + .crm-submit-buttons {
+          border-top: none !important;
+          padding: 0 0 15px !important;
+        }
 
-      table + .crm-submit-buttons {
-        border-top: none !important;
-        padding: 0 0 15px !important;
+        .crm-button:first-of-type {
+          margin-right: 10px;
+        }
       }
     }
 
