--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -15,6 +15,10 @@
         padding: 13px 20px;
       }
 
+      .dataTables_wrapper {
+        box-shadow: none;
+      }
+
       table {
         background: transparent;
         border: none;
