AI-131: Fix admin - view and edit custom fields issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -131,9 +131,15 @@
     .crm-datatable-pager-top {
       background: $gray-lighter;
       border-bottom: 1px solid $crm-background;
-      border-radius: $border-radius-child $border-radius-child 0 0;     
+      border-radius: $border-radius-child $border-radius-child 0 0;
+      font-size: $font-size-base;
       padding-bottom: 39px;
       padding-top: 10px;
+
+      .dataTables_length {
+        font-size: $font-size-base;
+        padding-left: 20px;
+      }
 
       .dataTables_paginate {
         padding-top: 0;
@@ -149,12 +155,15 @@
 
       .dataTables_info,
       .dataTables_paginate {
+        font-size: $font-size-base;
         padding-top: 0;
       }
     }
 
     .dataTables_info {
       color: $crm-copy;
+      padding-left: 20px;
+      width: 50%;
     }
   }
 }
