--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -26,6 +26,8 @@ $crm-light-green-color: #BEDEBB;
 
 $font-family-fontawesome: 'FontAwesome';
 
+$crm-font-weight-td: 100 !default;
+
 $crm-min-width: 1005px;
 $crm-max-width: 1504px;
 $crm-min-lg-width: 1505px;
