AI-131: Fix suggested issue in PR

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/administer/customize-data/_customize-data.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/administer/customize-data/_customize-data.scss
@@ -247,10 +247,11 @@
 
   .ui-dialog-content {
     tr td.html-adjust input[type="checkbox"] {
-      position: absolute;
       display: block;
+      position: absolute;
 
-      + .description , + br + .description {
+      + .description,
+      + br + .description {
         padding-left: 20px;
       }
     }
