--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_batch.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_batch.scss
@@ -156,179 +156,188 @@
   }
 }
 
-.page-civicrm-batch-entry {
-  #crm-main-content-wrapper {
-    background: $crm-white;
+.page-civicrm-batch-entry #crm-main-content-wrapper {
+  background: $crm-white;
+  border-radius: $panel-border-radius;
+
+  .CRM_Batch_Form_Entry {
     border-radius: $panel-border-radius;
+    box-shadow: $crm-form-layout-shadow;
+    padding: 15px 0 0;
+  }
 
-    .CRM_Batch_Form_Entry {
-      border-radius: $panel-border-radius;
-      box-shadow: $crm-form-layout-shadow;
-      padding: 15px 0;
+  .help {
+    background: $crm-light-green-color;
+    border: none;
+    color: $gray-darker;
+    margin: 0 15px;
+  }
+
+  .crm-button_qf_Entry_upload_force-save {
+    margin: 0 15px;
+  }
+
+  .status {
+    margin: 5px 15px;
+  }
+
+  #crm-batch-entry-table {
+    border-color: $crm-background;
+    display: block;
+    margin: 0 !important;
+    overflow-x: auto;
+    width: 100%;
+  }
+
+  table {
+    border: none !important;
+  }
+
+  .form-layout-compressed {
+    margin: 0 15px 20px;
+
+    .label {
+      color:  $crm-copy;
+      font-size: $font-size-base;
     }
 
-    .help {
-      background: $crm-light-green-color;
-      border: none;
-      color: $gray-darker;
-      margin: 0 15px;
+    td.right {
+      color:  $crm-copy;
+      vertical-align: middle;
     }
+  }
 
-    .crm-button_qf_Entry_upload_force-save {
-      margin: 0 15px;
-    }
+  .crm-grid-table {
+    border: none !important;
+    border-radius: $border-radius-base;
 
-    .status {
-      margin: 5px 15px;
-    }
+    .crm-grid-header {
+      border-bottom: 1px solid  $crm-dark-grayblue;
+      border-top: 1px solid  $crm-dark-grayblue;
+      border-top-left-radius: $border-radius-base;
+      border-top-right-radius: $border-radius-base;
 
-    #crm-batch-entry-table {
-      border-color: $crm-background;
-      display: block;
-      margin: 0 !important;
-      overflow-x: auto;
-      width: 100%;      
-    }
-
-    table {
-      border: none !important;
-    }
-
-    .form-layout-compressed {
-      margin: 0 15px 20px;
-
-      .label {
-        color:  $crm-copy;
-        font-size: $font-size-base;        
-      }
-
-      td.right {
-        color:  $crm-copy;            
+      .crm-grid-cell {
+        background: $gray-lighter;
+        border: none;
+        font: bold $font-size-base $font-family-base;
+        color: $gray-darker;
+        line-height: 1.5em;
+        min-width: 130px;
+        padding: 10px 15px;
         vertical-align: middle;
       }
-    }
 
-    .crm-grid-table {
-      border: none !important;
-      border-radius: $border-radius-base;
-
-      .crm-grid-header {
-        border-bottom: 1px solid  $crm-dark-grayblue;
+      .crm-grid-cell:first-child {
         border-top-left-radius: $border-radius-base;
-        border-top-right-radius: $border-radius-base;
-
-        .crm-grid-cell {
-          background: $gray-lighter;
-          border: none;
-          font: $crm-font-weight-h1 $font-size-base $font-family-base;
-          padding: 15px 10px;
-          vertical-align: middle;
-        }
-
-        .crm-grid-cell:first-child {
-          border-top-left-radius: $border-radius-base;
-        }
-
-        .crm-grid-cell:last-child {
-          border-top-right-radius: $border-radius-base;
-        }
+        min-width: 10px;
       }
 
-      .crm-grid-row {
-        border-bottom: 1px solid  $crm-background;
-        border-bottom-left-radius: $border-radius-base;
-        border-bottom-right-radius: $border-radius-base;
-
-        &.odd-row {
-          background: $crm-white;
-        }
-
-        &:last-child .crm-grid-cell {
-          &:first-child {
-            border-bottom-left-radius: $border-radius-base;
-          }
-
-          &:last-child {
-            border-bottom-right-radius: $border-radius-base;
-          }
-        }
-
-        .crm-grid-cell {
-          border: none;
-          padding: 10px;
-
-          span.batch-edit,
-          span.batch-valid, 
-          span.batch-invalid {
-            line-height: 30px;
-          }
-        }
-
-        > .select2-container {
-          margin: 10px;
-        }
-
-        input.crm-form-text,
-        input.dateplugin {
-          @include transition(border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s);
-          background-color: $crm-white;
-          background-image: none;
-          border: 1px solid $crm-darker-grayblue;
-          border-radius: $border-radius-base;
-          box-shadow: $crm-input-shadow;
-          color: $gray-darker;
-          font-size: $font-size-base;
-          height: 20px;
-          padding: 4px 10px;          
-        }
-
-        input.dateplugin  {
-          width: 62px !important;
-        }
-
-        [class*="crm-batch-join_date-"],
-        [class*="crm-batch-membership_"] {
-            display: block;
-            width: 125px !important;
-
-            .crm-clear-link {
-              margin-left: -5px !important;
-              padding: 4px 0;
-            }
-        }
-
-        .select2-container {
-          margin-bottom: 10px;
-
-          .select2-choice {          
-            box-shadow: $crm-input-shadow;
-            height: 28px;
-            line-height: 28px;
-
-            .select2-arrow {
-              background: transparent;
-            }
-          }
-
-          &#s2id_field_1_membership_type_1 {
-            width: 120px !important;
-          }        
-        }
-      }      
+      .crm-grid-cell:last-child {
+        border-top-right-radius: $border-radius-base;
+      }
     }
 
-    .crm-submit-buttons {
-      margin: 20px 0;
-      padding: 0 15px;
+    .crm-grid-row {
+      border-bottom: 1px solid  $crm-background;
+      border-bottom-left-radius: $border-radius-base;
+      border-bottom-right-radius: $border-radius-base;
 
-      .crm-form-submit {
-        background: $brand-primary;
-        border-color: $brand-primary;
-        border-radius: $border-radius-base;
-        padding: 8px 15px;
-        text-shadow: none;
-        text-transform: uppercase;
+      &.odd-row {
+        background: $crm-white;
       }
+
+      &:last-child .crm-grid-cell {
+        &:first-child {
+          border-bottom-left-radius: $border-radius-base;
+        }
+
+        &:last-child {
+          border-bottom-right-radius: $border-radius-base;
+        }
+      }
+
+      .crm-grid-cell {
+        border: none;
+        padding: 10px;
+
+        span.batch-edit,
+        span.batch-valid, 
+        span.batch-invalid {
+          line-height: 30px;
+        }
+      }
+
+      > .select2-container {
+        margin: 10px;
+      }
+
+      input.crm-form-text,
+      input.dateplugin {
+        @include transition(border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s);
+        background-color: $crm-white;
+        background-image: none;
+        border: 1px solid $crm-darker-grayblue;
+        border-radius: $border-radius-base;
+        box-shadow: $crm-input-shadow;
+        color: $gray-darker;
+        font-size: $font-size-base;
+        height: 20px;
+        padding: 4px 10px;
+      }
+
+      input.dateplugin  {
+        width: 85px !important;
+      }
+
+      [class*="crm-batch-join_date-"],
+      [class*="crm-batch-membership_"] {
+          display: block;
+          width: 150px !important;
+
+          .crm-clear-link {
+            margin-left: -5px !important;
+            padding: 4px 0;
+          }
+      }
+
+      .select2-container {
+        margin-bottom: 10px;
+
+        .select2-choice {
+          box-shadow: $crm-input-shadow;
+          height: 28px;
+          line-height: 28px;
+
+          .select2-arrow {
+            background: transparent;
+          }
+        }
+      }
+
+      .select2-container#s2id_field_1_membership_type_1 {
+        width: 120px !important;
+      }
+    }      
+  }
+
+  .crm-submit-buttons {
+    height: auto;
+    margin: 20px 0 15px;
+    padding: 0 15px;
+  }
+
+  .crm-submit-buttons .crm-form-submit {
+    background: $brand-primary;
+    border-color: $brand-primary;
+    border-radius: $panel-border-radius;
+    font-family: $font-family-base;
+    padding: 9px 15px;
+    text-shadow: none;
+    text-transform: uppercase;
+
+    &:hover {
+      background: $crm-blue-light;
     }
   }
 }
