--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -1153,8 +1153,6 @@
     }    
   }
 
-  .page-civicrm-member {
-    .CRM_Member_Form_Search h3:first-of-type {
-      margin-top: 0;
-    }
+  .page-civicrm-member .CRM_Member_Form_Search h3:first-of-type {
+    margin-top: 0;
   }
