AI-121: Fix view event modal issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -88,6 +88,10 @@
   a.crm-hover-button.action-item, 
   .crm-hover-button.btn-slide {
     text-transform: capitalize;
+
+    &:hover {
+      color: $brand-primary !important;
+    }
   }
 
   span.btn-slide {
