AI-87: Fix text cut issue

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_relationships.scss
@@ -142,6 +142,7 @@
 
           &:nth-child(2) a:last-child {
             display: inline-block;
+            line-height: 1.2em;
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
