--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -60,15 +60,16 @@
       background: $crm-white;
       border-color: $crm-darker-grayblue;
       border-radius: $border-radius-base;
+      box-shadow: none;
 
       .select2-arrow {
         background: $crm-white;
         padding: 0 4px;
+      }
 
-        b {
-          height: 18px;
-          margin-top: 2px;
-        }
+      .select2-arrow b {
+        height: 18px;
+        margin-top: 2px;
       }
 
       abbr {
@@ -157,6 +158,10 @@
       tbody td {
         line-height: 1.4em;
         padding: 12px 20px; 
+      }
+
+      tbody td:last-child {
+        text-align: right;
       }
     }
 
