AI-132: Fix contact relationships tab - contact record pop up issue

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
@@ -89,6 +89,14 @@
     &.label {
       vertical-align: middle !important;
     }
+
+    .crm-table-group-summary td {
+      background: $crm-dark-blue !important;
+
+      &:last-child {
+        text-align: left;
+      }
+    }
   }
 
   &.form-layout {
