--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -146,21 +146,21 @@
     box-shadow: $box-shadow;
     margin-bottom: 20px;
 
-    table {
+    table.dataTable {
       box-shadow: none !important;
       max-width: 100%;
 
-      thead th {
+      > thead > th {
         line-height: 1.4em;
         padding: 15px 20px;        
       }
 
-      tbody td {
+      > tbody > td {
         line-height: 1.4em;
         padding: 12px 20px; 
       }
 
-      tbody td:last-child {
+      > tbody > td:last-child {
         text-align: right;
       }
     }
