--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
@@ -4,18 +4,43 @@
   margin-top: 20px;
 
   .crm-search-tasks {
+    background: $gray-lighter;
     border-bottom: solid 1px $crm-background;
     border-radius: 0 !important;
-    box-shadow: none;    
-    margin-bottom: 15px !important;
+    box-shadow: none;
+    margin-bottom: 0 !important;
+
+    td {
+      padding: 10px;
+    }
+
+    td .qill {
+      color: $crm-copy;
+    }
+
+    .select2-container {
+      margin: 0 !important;
+    }
   }
 
   .crm-pager {
+    background: $gray-lighter;
     margin: 0;
 
     > .element-right {
       margin-top: 7px;
+    }   
+
+    + .float-right {
+      background: $crm-gray-lightest;
+      float: none !important;
+      padding: 4px 10px 10px !important;
+      text-align: right
     }
+  }
+
+  script + .crm-pager {
+    background: $crm-gray-lightest;
   }
 
   .sticky th {
@@ -41,21 +66,21 @@
   #alpha-filter,
   .crm-search-tasks,
   .crm-selection-reset {
-    background: $crm-white !important;
-    padding: 15px !important;
+    background: $gray-lighter !important;
+    padding: 15px 15px 5px !important;
   }
 
   #alpha-filter {
     float: left;
-    margin-bottom: 15px !important;
+    margin: 0 !important;
 
     a {
       color: $brand-primary;
     }
 
     + .crm-selection-reset {
-      margin-bottom: 15px !important;
       float: right;
+      margin-bottom: 10px !important;
       margin-top: 10px;
     }
   }
@@ -67,22 +92,40 @@
 
   table.selector {
     @extend %crm-table;
-    border-top: solid 1px $crm-background;
-    padding-top: 15px !important;
-    margin-top: 15px !important;
+    border-top: solid 1px $crm-dark-grayblue;
+    margin-top: 0 !important;
+    padding-top: 0 !important;
 
     tr {
       padding-left: 0 !important;
 
-      td,
-      th {
+      > th {
+        line-height: 1.5em !important;
+        padding: 14px 10px !important;
         vertical-align: middle;
       }
 
-      td:not(:last-child),
-      th:not(:last-child) {
-        line-height: 20px;
+      > th:first-child {
+        padding-left: 20px !important;
+      }
 
+      > td {
+        line-height: 1.5em;
+        padding: 12px 10px;
+        vertical-align: middle;
+
+        &:first-child {
+          padding-left: 20px;
+        }
+
+        &:last-child {
+          padding-right: 20px;
+          text-align: right;
+        }
+      }
+
+      > td:not(:last-child),
+      > th:not(:last-child) {
         .privacy-flag {
           margin-left: 5px;
           width: 27px;
