AI-129: Fix suggested issue in PR

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
@@ -35,7 +35,7 @@
       background: $crm-gray-lightest;
       float: none !important;
       padding: 4px 10px 10px !important;
-      text-align: right
+      text-align: right;
     }
   }
 
